added background hover colors to buttons

--- a/styles.css
+++ b/styles.css
@@ -36,21 +36,37 @@ button {
     flex: 1;
 }
 
+.numeric-button:hover {
+    background-color: rgb(192, 192, 192);
+}
+
 .arithmetic-buttons {
     display: grid;
     grid-template-columns: auto auto auto auto; 
 }
 
 .clear {
-    background-color: rgb(253, 255, 120);
+    background-color: rgb(254, 255, 174);
+}
+
+.clear:hover {
+    background-color: rgb(251, 255, 33);
 }
 
 .delete {
-    background-color: rgb(255, 184, 53);
+    background-color: rgb(255, 219, 151);
+}
+
+.delete:hover {
+    background-color: rgb(255, 170, 13);
 }
 
 .non-numeric-button {
-    background-color: rgb(97, 255, 255);
+    background-color: rgb(170, 255, 255);
+}
+
+.non-numeric-button:hover {
+    background-color: rgb(0, 255, 255);
 }
 
 .display {
@@ -67,7 +83,11 @@ button {
 }
 
 .equals {
-    background-color: yellow;
+    background-color: rgb(205, 255, 124);
+}
+
+.equals:hover {
+    background-color: rgb(170, 255, 0);
 }
 
 footer {
